k8s/apps/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/description: "Service dashboard"
    gethomepage.dev/group: "infrastructure"
    gethomepage.dev/icon: "homepage.png"
    gethomepage.dev/href: "https://homepage.item.fyi"
    gethomepage.dev/siteMonitor: "http://homepage.homepage.svc.cluster.local:3000"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=homepage"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.item.fyi`)
      services:
        - name: homepage
          port: 3000
  tls: {}
